# signer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_presets.py
backend/app/: config.py  deps.py  main.py  models.py  storage.py
backend/app/routers/: pdf.py  presets.py  settings.py
backend/app/schemas/: pdf.py  presets.py  settings.py
backend/app/services/: pdf_processor.py  placeholders.py  session_store.py  zip_builder.py
backend/tests/: test_pdf_processor.py  test_placeholders.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: PdfPreview.tsx  PresetsPanel.tsx  SignaturePreview.tsx  ToolOverlay.tsx  ToolPanel.tsx
frontend/src/hooks/: useAnchorCapture.ts
frontend/src/pages/: MainPage.tsx  SettingsPage.tsx
frontend/src/state/: toolsStore.ts
